feat: добавлено поле is_public для деления на личные и публичные мемы; интегрирована система long_pulling с очередью для обработки статусов генерации с нейронки и сохранения в minio
